<resources>
    <string name="app_name">Ultimate Cop</string>
    <string name="highscore">HighScores</string>
    <string name="newgame">New Game</string>
    <string name="instructions">Instructions</string>
    <string name="title_activity_your_details">Enter Your Details</string>
    <string name="make_photo">Make Photo</string>
    <string name="fullInstructions">nqkvi laina</string>
    <string name="yourPictureShouldBeHere">Picture of You</string>
    <string name="Save">Save</string>
    <string name="tryAgain">Try Again</string>
    <string name="backToHome">Back to Main</string>
    <string name="showInst">Show Instruction</string>
    <string name="hideInst">hide Instruction</string>
    <string name="title_activity_difficulty_option">DifficultyOption</string>
    <string name="easy">EASY</string>
    <string name="normal">NORMAL</string>
    <string name="hard">HARD</string>

</resources>
