<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/icytower2"
    tools:context="me.icytower.UltimateCop.Activities.MainActivity">
    <LinearLayout
        android:id="@+id/instructionsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:id="@+id/sasa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_weight="2"
            android:background="@color/white"
            android:textStyle="italic"
            android:text="@string/title_activity_difficulty_option"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="3">
        <Button
            android:id="@+id/easy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_weight="2"
            android:background="@drawable/roundshapebutton"
            android:onClick="initializeNewGame"
            android:textStyle="italic"
            android:text="@string/easy"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="3">
        <Button
            android:id="@+id/normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_weight="2"
            android:background="@drawable/yellowbutton"
            android:textStyle="italic"
            android:onClick="initializeNewGame"
            android:text="@string/normal"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_weight="2"
            android:background="@drawable/backbutton"
            android:textStyle="italic"
            android:onClick="initializeNewGame"
            android:text="@string/hard"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>
