<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/icytower2"
    tools:context="me.icytower.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/startNewGame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_weight="2"
            android:background="@drawable/roundshapebutton"
            android:onClick="initializeNewGame"
            android:text="@string/newgame"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/loadHighScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_weight="2"
            android:background="@drawable/roundshapebutton"
            android:onClick="loadHighScores"
            android:text="@string/highscore"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/showInstructions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_weight="2"
            android:background="@drawable/roundshapebutton"
            android:onClick="showInstructions"
            android:text="@string/instructions"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/yourData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_weight="2"
            android:background="@drawable/roundshapebutton"
            android:onClick="enterDetails"
            android:text="@string/title_activity_your_details"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>
